review fix: Missing Tests for Audit Logging Functionality
Co-authored-by: Gallop Intelligence <bot@gallopintelligence.com>